tests/errors/semantic/test_semantic_01_duplicate_declaration.f90
program test_semantic_01_duplicate_declaration
  implicit none
  integer :: a
  real :: a
end program test_semantic_01_duplicate_declaration